# RMSGD

./: .coveragerc  .env-sample  .flake8  .gitignore  .rc  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
configs/: adabound.yaml  adam.yaml  adamp.yaml  example.yaml  models_choices.txt  optimizer_choices.txt  rmsgd.yaml  scheduler_choices.txt  sgd.yaml
docs/source/: conf.py  index.rst  modules.rst  production.rst
experiments/: readme.md
experiments/notebooks/: readme.md
guides/: sphinx_guide.md
scripts/: README.md  demo_knowledge_gain_vs_proj_stability.py  evalutate_excell_data_AdaLRT.py  evalutate_excell_data_AdaS.py  evalutate_excell_data_condition_study.py  knowledge_gain_vs_mapping_condition_graphs.py  test_accuracy_training_loss.py  test_accuracy_training_loss_comparison.py
src/: config.yaml  utils.py
src/adas/: .gitignore  AdaS.py  Adas.py  VBMF.py  __init__.py  __main__.py  _adas.py  adas.py  adas_optimizer.py  components.py  config.yaml  data.py  datasets.py  early_stop.py  gpu.py  lr_range_test.py  matrix_factorization.py  metrics.py  profiler.py  train.py  utils.py
src/models/: alexnet.py  convnext.py  densenet_cifar.py  drop.py  efficientnet_cifar.py  inception.py  resnext_cifar.py
src/optim/: adam.py  adasls.py  lr_scheduler.py  lrd.py  metrics.py  nadam.py  nosadam.py  padam.py  sam.py  sgdp.py  sls.py
src/rmsgd/: __init__.py  data.py  (+7 more)
tests/: support.py  test_data.py
unpackaged/: AdaS.py  VBMF.py  components.py  config.yaml  data.py  early_stop.py  main.py  metrics.py  train.py
(+68 files in other folders)
