[metadata]
name = rmsgd
version = 1.0.2
author = Mathieu Tuli
author_email = tuli.mathieu@gmail.com
description = The RMSGD Optimizer and Knowledge Gain/Mapping Condition quality metrics built in PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahdihosseini/RMSGD
project_urls =
    Bug Tracker = https://github.com/mahdihosseini/RMSGD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir = src
packages = rmsgd
python_requires = >=3.7

[options.packages.find]
where = src
